Hentet inn mer data fra api. Oppdaterte koden med nye navn

--- a/data/API_ny.ipynb
+++ b/data/API_ny.ipynb
@@ -2,15 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Henter data...\n",
-      "Lagret til: data/frost_data.csv\n"
+      "Henter data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leahs\\AppData\\Local\\Temp\\ipykernel_5812\\2719742325.py:61: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pd.concat([df, pd.DataFrame([{\"Dato\": dato, label: verdi}])], ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lagret til: data/Temperatur (°C).csv\n",
+      "Lagret til: data/Lufttrykk (hPa).csv\n",
+      "Lagret til: data/Nedbør (mm).csv\n"
      ]
     }
    ],
@@ -28,10 +44,11 @@
     "\n",
     "start_date = datetime(2023, 1, 1)\n",
     "end_date = datetime(2024, 12, 31)\n",
-    "delta = timedelta(days=30)  # 30-dagers bolker\n",
+    "delta = timedelta(days=30)\n",
     "\n",
+    "# Bruk ferdig aggregerte daglige verdier fra Frost\n",
     "elements = {\n",
-    "    \"air_temperature\": \"Temperatur (°C)\",  \n",
+    "    \"mean(air_temperature P1D)\": \"Temperatur (°C)\",  \n",
     "    \"mean(air_pressure_at_sea_level P1D)\": \"Lufttrykk (hPa)\",  \n",
     "    \"sum(precipitation_amount P1D)\": \"Nedbør (mm)\"\n",
     "}\n",
@@ -39,20 +56,18 @@
     "force_update = input(\"Vil du hente nye data fra Frost API? (ja/nei): \").strip().lower()\n",
     "\n",
     "def fetch_data():\n",
-    "    filename = os.path.join(\"data\", \"frost_data.csv\")\n",
+    "    dataframes = {label: pd.DataFrame(columns=[\"Dato\", label]) for label in elements.values()}\n",
     "\n",
-    "    if os.path.exists(filename) and force_update != \"ja\":\n",
-    "        print(\"Bruker eksisterende fil:\", filename)\n",
+    "    if all(os.path.exists(os.path.join(\"data\", f\"{label}.csv\")) for label in elements.values()) and force_update != \"ja\":\n",
+    "        print(\"Bruker eksisterende filer.\")\n",
     "        return\n",
     "\n",
     "    print(\"Henter data...\")\n",
     "\n",
-    "    all_data = pd.DataFrame(columns=[\"Dato\"])\n",
-    "\n",
     "    current_date = start_date\n",
     "    while current_date <= end_date:\n",
     "        batch_start = current_date.strftime(\"%Y-%m-%d\")\n",
-    "        batch_end = (current_date + delta).strftime(\"%Y-%m-%d\")\n",
+    "        batch_end = min(current_date + delta, end_date).strftime(\"%Y-%m-%d\")\n",
     "        batch_reference_time = f\"{batch_start}/{batch_end}\"\n",
     "\n",
     "        params = {\n",
@@ -65,20 +80,19 @@
     "        \n",
     "        if response.status_code == 200:\n",
     "            raw_data = response.json().get(\"data\", [])\n",
-    "            batch_df = pd.DataFrame([\n",
-    "                {\"Dato\": entry[\"referenceTime\"].split(\"T\")[0], \n",
-    "                 elements[entry[\"observations\"][0][\"elementId\"]]: entry[\"observations\"][0][\"value\"]}\n",
-    "                for entry in raw_data\n",
-    "            ])\n",
+    "            \n",
+    "            for entry in raw_data:\n",
+    "                dato = entry[\"referenceTime\"].split(\"T\")[0]\n",
+    "                if dato > end_date.strftime(\"%Y-%m-%d\"):\n",
+    "                    continue\n",
+    "                for obs in entry[\"observations\"]:\n",
+    "                    element_id = obs[\"elementId\"]\n",
+    "                    verdi = obs[\"value\"]\n",
+    "                    label = elements[element_id]\n",
+    "                    df = dataframes[label]\n",
     "\n",
-    "            # **Løsning på feilen:** Håndter duplikater ved å bruke `suffixes`\n",
-    "            all_data = pd.merge(all_data, batch_df, on=\"Dato\", how=\"outer\", suffixes=(\"\", \"_dupe\"))\n",
-    "\n",
-    "            # Fjern duplikatkolonner hvis de finnes\n",
-    "            for col in elements.values():\n",
-    "                if f\"{col}_dupe\" in all_data.columns:\n",
-    "                    all_data[col] = all_data[col].combine_first(all_data[f\"{col}_dupe\"])\n",
-    "                    all_data.drop(columns=[f\"{col}_dupe\"], inplace=True)\n",
+    "                    df = pd.concat([df, pd.DataFrame([{\"Dato\": dato, label: verdi}])], ignore_index=True)\n",
+    "                    dataframes[label] = df\n",
     "\n",
     "        else:\n",
     "            print(f\"Feil ved henting av data ({batch_reference_time}): {response.status_code}\")\n",
@@ -86,18 +100,18 @@
     "\n",
     "        current_date += delta\n",
     "\n",
-    "    all_data.to_csv(filename, index=False, encoding=\"utf-8\")\n",
-    "    print(\"Lagret til:\", filename)\n",
+    "    for label, df in dataframes.items():\n",
+    "        df.drop_duplicates(subset=\"Dato\", keep=\"last\", inplace=True)\n",
+    "        df.sort_values(\"Dato\", inplace=True)\n",
+    "        df.to_csv(os.path.join(\"data\", f\"{label}.csv\"), index=False, encoding=\"utf-8\")\n",
+    "        print(f\"Lagret til: data/{label}.csv\")\n",
     "\n",
-    "fetch_data()\n",
-    "\n",
-    "\n",
-    "    "
+    "fetch_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +124,7 @@
    ],
    "source": [
     "# TEMPFIL 15MIN -> GJENOMSNITT DAG\n",
+    "#KAN EGT SLETTE!!!\n",
     "\n",
     "import pandas as pd\n",
     "# Leser inn filen med temperaturmålinger\n",
@@ -142,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
