--- a/tasks/sammenslaaing.ipynb
+++ b/tasks/sammenslaaing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +27,8 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "#TROR VI KAN SLETTE\n",
     "\n",
     "# Leser inn filene\n",
     "df_temp = pd.read_csv(\"frost_air_temperature_jul-des_2024.csv\")\n",
