--- a/tasks/sammenslaaing_gjsnitt.ipynb
+++ b/tasks/sammenslaaing_gjsnitt.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
-      "0  2024-07-01                     10.393750           1003.0          8.0\n",
-      "1  2024-07-02                     10.177778           1002.9          3.6\n",
-      "2  2024-07-03                     11.973611           1000.5          2.0\n",
-      "3  2024-07-04                     15.785417            993.2          0.1\n",
-      "4  2024-07-05                     12.113889            991.8          7.7\n"
+      "         Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)\n",
+      "0  2023-01-01              0.5           1004.1          4.5\n",
+      "1  2023-01-02             -5.4           1011.0          0.0\n",
+      "2  2023-01-03             -6.4           1017.9          0.1\n",
+      "3  2023-01-04             -6.2           1011.4          0.0\n",
+      "4  2023-01-05             -3.1           1012.7          0.0\n"
      ]
     }
    ],
@@ -29,21 +29,18 @@
     "import pandas as pd\n",
     "\n",
     "# Leser inn de 3 filene for vær verdier\n",
-    "df_gj = pd.read_csv(\"frost_air_temperature_daglig_gjennomsnitt.csv\")\n",
-    "df_trykk = pd.read_csv(\"frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\")\n",
-    "df_nedbør = pd.read_csv(\"frost_sumprecipitation_amount_P1D_jul-des_2024.csv\")\n",
+    "df_temp = pd.read_csv(\"../data/R_Temperatur (°C).csv\")\n",
+    "df_trykk = pd.read_csv(\"../data/R_Lufttrykk (hPa).csv\")\n",
+    "df_nedbør = pd.read_csv(\"../data/R_Nedbør (mm).csv\")\n",
     "\n",
     "# Slår sammen filene til en fil, basert på dato\n",
-    "samlet = df_gj \\\n",
+    "samlet = df_temp \\\n",
     "    .merge(df_trykk, on=\"Dato\", how=\"left\") \\\n",
     "    .merge(df_nedbør, on=\"Dato\", how=\"left\")\n",
     "\n",
-    "samlet.rename(columns={\n",
-    "    \"Temperatur (°C)\": \"Temperatur (°C) daglig snitt\"\n",
-    "}, inplace=True)\n",
     "\n",
     "# Oppretter ny fil for samlet verdier\n",
-    "samlet.to_csv(\"Sammenslaaing_gjsnitt.csv\", index=False)\n",
+    "samlet.to_csv(\"R_Sammenslaaing_gjsnitt.csv\", index=False)\n",
     "\n",
     "print(samlet.head())\n"
    ]
@@ -112,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,37 +134,23 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Dato</th>\n",
-       "      <th>Temperatur (°C) daglig snitt</th>\n",
+       "      <th>Temperatur (°C)</th>\n",
        "      <th>Lufttrykk (hPa)</th>\n",
        "      <th>Nedbør (mm)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-07-06</td>\n",
-       "      <td>12.230556</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2024-08-03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1006.8</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
-       "5   2024-07-06                     12.230556              NaN          3.2\n",
-       "33  2024-08-03                           NaN           1006.8          0.0"
+       "Empty DataFrame\n",
+       "Columns: [Dato, Temperatur (°C), Lufttrykk (hPa), Nedbør (mm)]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +158,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_sammenslaaing = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
+    "df_sammenslaaing = pd.read_csv(\"../data/R_Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
     "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n"
    ]
@@ -189,11 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sammenslaaing_UtenFeil = df_sammenslaaing.copy()"
+    "df_R_Sammenslaaing_UtenFeil = df_sammenslaaing.copy()"
    ]
   },
   {
@@ -205,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
-    "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")\n",
+    "df_R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"R_Sammenslaaing_uten_feil.csv\")\n",
     "\n",
-    "df_sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
-    "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")"
+    "df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"R_Sammenslaaing_uten_feil.csv\")"
    ]
   },
   {
@@ -225,35 +208,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
-      "0 2024-07-01                     10.393750           1003.0          8.0\n",
-      "1 2024-07-02                     10.177778           1002.9          3.6\n",
-      "2 2024-07-03                     11.973611           1000.5          2.0\n",
-      "3 2024-07-04                     15.785417            993.2          0.1\n",
-      "4 2024-07-05                     12.113889            991.8          7.7\n"
+      "        Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)\n",
+      "0 2023-01-01              0.5           1004.1          4.5\n",
+      "1 2023-01-02             -5.4           1011.0          0.0\n",
+      "2 2023-01-03             -6.4           1017.9          0.1\n",
+      "3 2023-01-04             -6.2           1011.4          0.0\n",
+      "4 2023-01-05             -3.1           1012.7          0.0\n"
      ]
     }
    ],
    "source": [
     "# Gjør at 'Dato' er i datetime-format\n",
-    "df_sammenslaaing_UtenFeil['Dato'] = pd.to_datetime(df_sammenslaaing_UtenFeil['Dato'])\n",
+    "df_R_Sammenslaaing_UtenFeil['Dato'] = pd.to_datetime(df_R_Sammenslaaing_UtenFeil['Dato'])\n",
     "\n",
     "# Start fra første dato og generer resten\n",
-    "start_dato = df_sammenslaaing_UtenFeil.loc[0, 'Dato']\n",
-    "riktige_datoer = [start_dato + pd.Timedelta(days=i) for i in range(len(df_sammenslaaing_UtenFeil))]\n",
+    "start_dato = df_R_Sammenslaaing_UtenFeil.loc[0, 'Dato']\n",
+    "riktige_datoer = [start_dato + pd.Timedelta(days=i) for i in range(len(df_R_Sammenslaaing_UtenFeil))]\n",
     "\n",
     "# Sett inn de riktige datoene\n",
-    "df_sammenslaaing_UtenFeil['Dato'] = riktige_datoer\n",
+    "df_R_Sammenslaaing_UtenFeil['Dato'] = riktige_datoer\n",
     "\n",
     "\n",
-    "print(df_sammenslaaing_UtenFeil.head())"
+    "print(df_R_Sammenslaaing_UtenFeil.head())"
    ]
   },
   {
@@ -265,32 +248,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Les inn CSV-filen\n",
-    "df = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
+    "df = pd.read_csv(\"../data/R_Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
     "# Gå gjennom temperaturkolonnen med indekser\n",
     "for i in range(1, len(df) - 1):  \n",
-    "    temp = df.loc[i, \"Temperatur (°C) daglig snitt\"]\n",
+    "    temp = df.loc[i, \"Temperatur (°C)\"]\n",
     "\n",
     "    # Hvis verdien er mistenkelig eller tom\n",
     "    if pd.isna(temp) or temp <= -50 or temp >= 50:\n",
     "\n",
     "        # Gjennomsnitt av dagen før og dagen etter\n",
-    "        temp_forrige = df.loc[i - 1, \"Temperatur (°C) daglig snitt\"]\n",
-    "        temp_etter = df.loc[i + 1, \"Temperatur (°C) daglig snitt\"]\n",
+    "        temp_forrige = df.loc[i - 1, \"Temperatur (°C)\"]\n",
+    "        temp_etter = df.loc[i + 1, \"Temperatur (°C)\"]\n",
     "        gjennomsnitt = (temp_forrige + temp_etter) / 2\n",
     "\n",
     "        # Erstatt verdien\n",
-    "        df.loc[i, \"Temperatur (°C) daglig snitt\"] = gjennomsnitt\n",
+    "        df.loc[i, \"Temperatur (°C)\"] = gjennomsnitt\n",
     "\n",
     "# Skriv til filen uten feil\n",
-    "df.to_csv(\"Sammenslaaing_uten_feil.csv\", index=False)"
+    "df.to_csv(\"R_Sammenslaaing_uten_feil.csv\", index=False)"
    ]
   },
   {
@@ -302,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Les inn CSV-filen\n",
-    "df = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
+    "df = pd.read_csv(\"../data/R_Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
     "# Gå gjennom temperaturkolonnen med indekser\n",
     "for i in range(1, len(df) - 1):  \n",
@@ -327,7 +310,7 @@
     "        df.loc[i, \"Lufttrykk (hPa)\"] = gjennomsnitt\n",
     "\n",
     "# Skriv til filen uten feil\n",
-    "df.to_csv(\"Sammenslaaing_uten_feil.csv\", index=False)"
+    "df.to_csv(\"R_Sammenslaaing_uten_feil.csv\", index=False)"
    ]
   }
  ],
