rettet opp i feil

--- a/tasks/sammenslaaing_gjsnitt.ipynb
+++ b/tasks/sammenslaaing_gjsnitt.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,17 +140,31 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-01-06</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2023-02-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1016.8</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Dato, Temperatur (°C), Lufttrykk (hPa), Nedbør (mm)]\n",
-       "Index: []"
+       "          Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)\n",
+       "5   2023-01-06             -3.0              NaN          0.0\n",
+       "33  2023-02-03              NaN           1016.8          5.7"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,10 +207,10 @@
    "outputs": [],
    "source": [
     "df_R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"R_Sammenslaaing_uten_feil.csv\")\n",
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\")\n",
     "\n",
     "df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"R_Sammenslaaing_uten_feil.csv\")"
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\")"
    ]
   },
   {
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +287,7 @@
     "        df.loc[i, \"Temperatur (°C)\"] = gjennomsnitt\n",
     "\n",
     "# Skriv til filen uten feil\n",
-    "df.to_csv(\"R_Sammenslaaing_uten_feil.csv\", index=False)"
+    "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)"
    ]
   },
   {
@@ -310,7 +324,7 @@
     "        df.loc[i, \"Lufttrykk (hPa)\"] = gjennomsnitt\n",
     "\n",
     "# Skriv til filen uten feil\n",
-    "df.to_csv(\"R_Sammenslaaing_uten_feil.csv\", index=False)"
+    "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)"
    ]
   }
  ],
