--- a/tasks/API_ny.ipynb
+++ b/tasks/API_ny.ipynb
@@ -128,13 +128,13 @@
     "\n",
     "import pandas as pd\n",
     "# Leser inn filen med temperaturmålinger\n",
-    "df = pd.read_csv(\"data/frost_data.csv\")\n",
+    "df = pd.read_csv(\"../data/frost_data.csv\")\n",
     "\n",
     "# Beregn gjennomsnittstemperatur per dag\n",
     "daglig_gjennomsnitt = df.groupby(\"Dato\")[\"Temperatur (°C)\"].mean().reset_index()\n",
     "\n",
     "# Lagre til ny CSV-fil\n",
-    "daglig_gjennomsnitt.to_csv(\"data/frost_air_temperature_daglig_gjennomsnitt.csv\", index=False)\n",
+    "daglig_gjennomsnitt.to_csv(\"../data/frost_air_temperature_daglig_gjennomsnitt.csv\", index=False)\n",
     "\n",
     "\n",
     "print(\"Daglig gjennomsnitt lagret i frost_air_temperature_daglig_gjennomsnitt.csv\")\n"
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
