slettet uviktige csv filer, rettet opp i koden for sammenslåing osv

--- a/tasks/API_ny.ipynb
+++ b/tasks/API_ny.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,9 +48,9 @@
     "\n",
     "# Bruk ferdig aggregerte daglige verdier fra Frost\n",
     "elements = {\n",
-    "    \"mean(air_temperature P1D)\": \"Temperatur (°C)\",  \n",
-    "    \"mean(air_pressure_at_sea_level P1D)\": \"Lufttrykk (hPa)\",  \n",
-    "    \"sum(precipitation_amount P1D)\": \"Nedbør (mm)\"\n",
+    "    \"mean(air_temperature P1D)\": \"Temperatur (°C)\",  #Henter gjennomsnittsverdien(mean) for en dag(P1D)\n",
+    "    \"mean(air_pressure_at_sea_level P1D)\": \"Lufttrykk (hPa)\",  #Henter gjennomsnittsverdien(mean) for en dag(P1D)\n",
+    "    \"sum(precipitation_amount P1D)\": \"Nedbør (mm)\" #Henter totalt nedbør for en dag\n",
     "}\n",
     "\n",
     "force_update = input(\"Vil du hente nye data fra Frost API? (ja/nei): \").strip().lower()\n",
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "# TEMPFIL 15MIN -> GJENOMSNITT DAG\n",
+    "\"\"\"# TEMPFIL 15MIN -> GJENOMSNITT DAG\n",
     "#KAN EGT SLETTE!!!\n",
     "\n",
     "import pandas as pd\n",
@@ -137,8 +137,13 @@
     "daglig_gjennomsnitt.to_csv(\"../data/frost_air_temperature_daglig_gjennomsnitt.csv\", index=False)\n",
     "\n",
     "\n",
-    "print(\"Daglig gjennomsnitt lagret i frost_air_temperature_daglig_gjennomsnitt.csv\")\n"
+    "print(\"Daglig gjennomsnitt lagret i frost_air_temperature_daglig_gjennomsnitt.csv\")\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
