--- a/tasks/sammenslaaing_gjsnitt.ipynb
+++ b/tasks/sammenslaaing_gjsnitt.ipynb
@@ -9,19 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)\n",
-      "0  2023-01-01              0.5           1004.1          4.5\n",
-      "1  2023-01-02             -5.4           1011.0          0.0\n",
-      "2  2023-01-03             -6.4           1017.9          0.1\n",
-      "3  2023-01-04             -6.2           1011.4          0.0\n",
-      "4  2023-01-05             -3.1           1012.7          0.0\n"
+      "         Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
+      "0  2023-01-01                           0.5           1004.1          4.5   \n",
+      "1  2023-01-02                          -5.4           1011.0          0.0   \n",
+      "2  2023-01-03                          -6.4           1017.9          0.1   \n",
+      "3  2023-01-04                          -6.2           1011.4          0.0   \n",
+      "4  2023-01-05                          -3.1           1012.7          0.0   \n",
+      "\n",
+      "   Relativ fuktighet (%)  Skydekke (oktas)  \n",
+      "0                     69               3.0  \n",
+      "1                     83               7.0  \n",
+      "2                     85               1.0  \n",
+      "3                     87               8.0  \n",
+      "4                     81               8.0  \n"
      ]
     }
    ],
@@ -32,15 +39,24 @@
     "df_temp = pd.read_csv(\"../data/R_Temperatur (°C).csv\")\n",
     "df_trykk = pd.read_csv(\"../data/R_Lufttrykk (hPa).csv\")\n",
     "df_nedbør = pd.read_csv(\"../data/R_Nedbør (mm).csv\")\n",
+    "df_luftfuktighet = pd.read_csv(\"../data/luftfuktighet_daglig_2024.csv\")\n",
+    "df_skydekke = pd.read_csv(\"../data/skydekke_daglig_2024.csv\")\n",
+    "\n",
     "\n",
     "# Slår sammen filene til en fil, basert på dato\n",
     "samlet = df_temp \\\n",
     "    .merge(df_trykk, on=\"Dato\", how=\"left\") \\\n",
-    "    .merge(df_nedbør, on=\"Dato\", how=\"left\")\n",
+    "    .merge(df_nedbør, on=\"Dato\", how=\"left\") \\\n",
+    "    .merge(df_luftfuktighet, on=\"Dato\", how=\"left\") \\\n",
+    "    .merge(df_skydekke, on=\"Dato\", how=\"left\" )\n",
+    "\n",
+    "samlet.rename(columns={\n",
+    "    \"Temperatur (°C)\": \"Temperatur (°C) daglig snitt\"\n",
+    "}, inplace=True)\n",
     "\n",
     "\n",
     "# Oppretter ny fil for samlet verdier\n",
-    "samlet.to_csv(\"R_Sammenslaaing_gjsnitt.csv\", index=False)\n",
+    "samlet.to_csv(\"../data/R_Sammenslaaing_gjsnitt.csv\", index=False)\n",
     "\n",
     "print(samlet.head())\n"
    ]
@@ -109,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -134,37 +150,25 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Dato</th>\n",
-       "      <th>Temperatur (°C)</th>\n",
+       "      <th>Temperatur (°C) daglig snitt</th>\n",
        "      <th>Lufttrykk (hPa)</th>\n",
        "      <th>Nedbør (mm)</th>\n",
+       "      <th>Relativ fuktighet (%)</th>\n",
+       "      <th>Skydekke (oktas)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2023-01-06</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2023-02-03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1016.8</td>\n",
-       "      <td>5.7</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)\n",
-       "5   2023-01-06             -3.0              NaN          0.0\n",
-       "33  2023-02-03              NaN           1016.8          5.7"
+       "Empty DataFrame\n",
+       "Columns: [Dato, Temperatur (°C) daglig snitt, Lufttrykk (hPa), Nedbør (mm), Relativ fuktighet (%), Skydekke (oktas)]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,15 +206,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\")\n",
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
     "\n",
     "df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\")"
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
    ]
   },
   {
