--- a/tasks/skydekke_luftfuktighet.ipynb
+++ b/tasks/skydekke_luftfuktighet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Henter data for relativ fuktighet (%)...\n",
-      "Relativ fuktighet (%) lagret som: data/luftfuktighet_daglig_2024.csv\n",
+      "Relativ fuktighet (%) lagret som: ../data/luftfuktighet_daglig_2024.csv\n",
       "Henter data for skydekke (oktas)...\n",
-      "Skydekke (oktas) lagret som: data/skydekke_daglig_2024.csv\n"
+      "Skydekke (oktas) lagret som: ../data/skydekke_daglig_2024.csv\n"
      ]
     }
    ],
@@ -25,12 +25,10 @@
     "CLIENT_ID = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"\n",
     "SOURCE = \"SN18700\"\n",
     "BASE_URL = \"https://frost.met.no/observations/v0.jsonld\"\n",
-    "reference_time = \"2024-07-01/2024-12-31\"\n",
+    "reference_time = \"2023-01-01/2024-12-31\"\n",
     "\n",
     "def fetch_and_save(element_id, label, filename):\n",
-    "    if os.path.exists(filename):\n",
-    "        print(\"Bruker eksisterende fil:\", filename)\n",
-    "        return\n",
+    "\n",
     "\n",
     "    print(f\"Henter data for {label.lower()}...\")\n",
     "    params = {\n",
@@ -49,13 +47,13 @@
     "        print(f\"Feil ved henting av {label.lower()}: {response.status_code}\\n{response.text}\")\n",
     "\n",
     "# Hent begge datasett\n",
-    "fetch_and_save(\"mean(relative_humidity P1D)\", \"Relativ fuktighet (%)\", \"data/luftfuktighet_daglig_2024.csv\")\n",
-    "fetch_and_save(\"mean(cloud_area_fraction P1D)\", \"Skydekke (oktas)\", \"data/skydekke_daglig_2024.csv\")"
+    "fetch_and_save(\"mean(relative_humidity P1D)\", \"Relativ fuktighet (%)\", \"../data/luftfuktighet_daglig_2024.csv\")\n",
+    "fetch_and_save(\"mean(cloud_area_fraction P1D)\", \"Skydekke (oktas)\", \"../data/skydekke_daglig_2024.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,18 +61,18 @@
      "output_type": "stream",
      "text": [
       "         Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
-      "0  2024-07-01                     10.393750           1003.0          8.0   \n",
-      "1  2024-07-02                     10.177778           1002.9          3.6   \n",
-      "2  2024-07-03                     11.973611           1000.5          2.0   \n",
-      "3  2024-07-04                     15.785417            993.2          0.1   \n",
-      "4  2024-07-05                     12.113889            991.8          7.7   \n",
+      "0  2023-07-01                     12.632639            998.7          3.0   \n",
+      "1  2023-07-02                     16.920833            990.2          0.0   \n",
+      "2  2023-07-03                     13.662500            988.5          4.4   \n",
+      "3  2023-07-04                     11.777083            997.8          1.4   \n",
+      "4  2023-07-05                     14.250694           1008.8          0.0   \n",
       "\n",
       "   Relativ fuktighet (%)  Skydekke (oktas)  \n",
-      "0                     67               4.7  \n",
-      "1                     62               7.7  \n",
-      "2                     65               7.0  \n",
-      "3                     91               7.7  \n",
-      "4                     79               6.7  \n"
+      "0                     66               5.3  \n",
+      "1                     84               7.0  \n",
+      "2                     77               7.7  \n",
+      "3                     79               7.3  \n",
+      "4                     72               7.0  \n"
      ]
     }
    ],
@@ -82,11 +80,11 @@
     "import pandas as pd\n",
     "\n",
     "# Les inn filene (fra data-mappen)\n",
-    "df_gj = pd.read_csv(\"data/frost_air_temperature_daglig_gjennomsnitt.csv\")\n",
-    "df_trykk = pd.read_csv(\"data/frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\")\n",
-    "df_nedbør = pd.read_csv(\"data/frost_sumprecipitation_amount_P1D_jul-des_2024.csv\")\n",
-    "df_luftfukt = pd.read_csv(\"data/luftfuktighet_daglig_2024.csv\")\n",
-    "df_skydekke = pd.read_csv(\"data/skydekke_daglig_2024.csv\")\n",
+    "df_gj = pd.read_csv(\"../data/frost_air_temperature_daglig_gjennomsnitt.csv\")\n",
+    "df_trykk = pd.read_csv(\"../data/frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\")\n",
+    "df_nedbør = pd.read_csv(\"../data/frost_sumprecipitation_amount_P1D_jul-des_2024.csv\")\n",
+    "df_luftfukt = pd.read_csv(\"../data/luftfuktighet_daglig_2024.csv\")\n",
+    "df_skydekke = pd.read_csv(\"../data/skydekke_daglig_2024.csv\")\n",
     "\n",
     "# Slå sammen alle datasettene på \"Dato\"\n",
     "samlet = df_gj \\\n",
@@ -501,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
