--- a/tasks/sammenslaaing_gjsnitt.ipynb
+++ b/tasks/sammenslaaing_gjsnitt.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
-      "0  2023-01-01                           0.5           1004.1          4.5   \n",
-      "1  2023-01-02                          -5.4           1011.0          0.0   \n",
-      "2  2023-01-03                          -6.4           1017.9          0.1   \n",
-      "3  2023-01-04                          -6.2           1011.4          0.0   \n",
-      "4  2023-01-05                          -3.1           1012.7          0.0   \n",
+      "         Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
+      "0  2023-01-01              1.1           1005.7          0.0   \n",
+      "1  2023-01-02             -2.7           1010.8          0.6   \n",
+      "2  2023-01-03             -5.8           1019.6          0.0   \n",
+      "3  2023-01-04             -7.9           1008.7          0.9   \n",
+      "4  2023-01-05             -3.9           1015.3         19.8   \n",
       "\n",
       "   Relativ fuktighet (%)  Skydekke (oktas)  \n",
       "0                     69               3.0  \n",
@@ -39,8 +39,8 @@
     "df_temp = pd.read_csv(\"../data/R_Temperatur (°C).csv\")\n",
     "df_trykk = pd.read_csv(\"../data/R_Lufttrykk (hPa).csv\")\n",
     "df_nedbør = pd.read_csv(\"../data/R_Nedbør (mm).csv\")\n",
-    "df_luftfuktighet = pd.read_csv(\"../data/luftfuktighet_daglig_2024.csv\")\n",
-    "df_skydekke = pd.read_csv(\"../data/skydekke_daglig_2024.csv\")\n",
+    "df_luftfuktighet = pd.read_csv(\"../data/R_Relativ fuktighet (%).csv\")\n",
+    "df_skydekke = pd.read_csv(\"../data/R_Skydekke (oktas).csv\")\n",
     "\n",
     "\n",
     "# Slår sammen filene til en fil, basert på dato\n",
@@ -50,9 +50,9 @@
     "    .merge(df_luftfuktighet, on=\"Dato\", how=\"left\") \\\n",
     "    .merge(df_skydekke, on=\"Dato\", how=\"left\" )\n",
     "\n",
-    "samlet.rename(columns={\n",
-    "    \"Temperatur (°C)\": \"Temperatur (°C) daglig snitt\"\n",
-    "}, inplace=True)\n",
+    "#samlet.rename(columns={\n",
+    " #   \"Temperatur (°C)\": \"Temperatur (°C) daglig snitt\"\n",
+    "#}, inplace=True)\n",
     "\n",
     "\n",
     "# Oppretter ny fil for samlet verdier\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Dato</th>\n",
-       "      <th>Temperatur (°C) daglig snitt</th>\n",
+       "      <th>Temperatur (°C)</th>\n",
        "      <th>Lufttrykk (hPa)</th>\n",
        "      <th>Nedbør (mm)</th>\n",
        "      <th>Relativ fuktighet (%)</th>\n",
@@ -164,11 +164,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [Dato, Temperatur (°C) daglig snitt, Lufttrykk (hPa), Nedbør (mm), Relativ fuktighet (%), Skydekke (oktas)]\n",
+       "Columns: [Dato, Temperatur (°C), Lufttrykk (hPa), Nedbør (mm), Relativ fuktighet (%), Skydekke (oktas)]\n",
        "Index: []"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
