opprettet rense rense_data

--- a/tasks/sammenslaaing_gjsnitt.ipynb
+++ b/tasks/sammenslaaing_gjsnitt.ipynb
@@ -178,7 +178,9 @@
     "\n",
     "df_sammenslaaing = pd.read_csv(\"../data/R_Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
-    "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n"
+    "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n",
+    "\n",
+    "#LAGT INN I RENSE DATA\n"
    ]
   },
   {
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +216,9 @@
     "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
     "\n",
     "df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
+    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)\n",
+    "\n",
+    "#LAGT INN I RENSE DATA"
    ]
   },
   {
@@ -291,7 +295,9 @@
     "        df.loc[i, \"Temperatur (°C)\"] = gjennomsnitt\n",
     "\n",
     "# Skriv til filen uten feil\n",
-    "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)"
+    "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
+    "\n",
+    "#LAGT INN I RENSE DATA"
    ]
   },
   {
@@ -328,7 +334,9 @@
     "        df.loc[i, \"Lufttrykk (hPa)\"] = gjennomsnitt\n",
     "\n",
     "# Skriv til filen uten feil\n",
-    "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)"
+    "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
+    "\n",
+    "#LAGT INN I RENSE DATA"
    ]
   }
  ],
