--- a/tasks/rense_data.ipynb
+++ b/tasks/rense_data.ipynb
@@ -74,27 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'df_R_Sammenslaaing_UtenFeil' is not defined",
+     "evalue": "name 'R_Sammenslaaing_uten_feil' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_R_Sammenslaaing_UtenFeil[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNedbør (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mabs\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdf_R_Sammenslaaing_UtenFeil\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNedbør (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m      2\u001b[0m df_R_Sammenslaaing_UtenFeil\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/R_Sammenslaaing_uten_feil.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m df_R_Sammenslaaing_UtenFeil[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLufttrykk (hPa)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mabs\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m df_R_Sammenslaaing_UtenFeil[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLufttrykk (hPa)\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_R_Sammenslaaing_UtenFeil' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-1d4000421be0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Nedbør (mm)'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mR_Sammenslaaing_uten_feil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Nedbør (mm)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/R_Sammenslaaing_uten_feil.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Lufttrykk (hPa)'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mR_Sammenslaaing_uten_feil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Lufttrykk (hPa)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/R_Sammenslaaing_uten_feil.csv\"\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'R_Sammenslaaing_uten_feil' is not defined"
      ]
     }
    ],
    "source": [
-    "df_R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
+    "R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Nedbør (mm)']]\n",
+    "R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
     "\n",
-    "df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
+    "R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Lufttrykk (hPa)']]\n",
+    "R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
    ]
   },
   {
@@ -174,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
