--- a/tasks/sammenslaaing_gjsnitt.ipynb
+++ b/tasks/sammenslaaing_gjsnitt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,16 +78,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 183 entries, 0 to 182\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column                        Non-Null Count  Dtype  \n",
-      "---  ------                        --------------  -----  \n",
-      " 0   Dato                          183 non-null    object \n",
-      " 1   Temperatur (°C) daglig snitt  183 non-null    float64\n",
-      " 2   Lufttrykk (hPa)               183 non-null    float64\n",
-      " 3   Nedbør (mm)                   183 non-null    float64\n",
-      "dtypes: float64(3), object(1)\n",
-      "memory usage: 7.1+ KB\n"
+      "Int64Index: 730 entries, 0 to 729\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Dato                   730 non-null    object \n",
+      " 1   Temperatur (°C)        730 non-null    float64\n",
+      " 2   Lufttrykk (hPa)        730 non-null    float64\n",
+      " 3   Nedbør (mm)            730 non-null    float64\n",
+      " 4   Relativ fuktighet (%)  730 non-null    int64  \n",
+      " 5   Skydekke (oktas)       730 non-null    float64\n",
+      "dtypes: float64(4), int64(1), object(1)\n",
+      "memory usage: 39.9+ KB\n"
      ]
     }
    ],
@@ -97,17 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dato                            0\n",
-      "Temperatur (°C) daglig snitt    0\n",
-      "Lufttrykk (hPa)                 0\n",
-      "Nedbør (mm)                     0\n",
+      "Dato                     0\n",
+      "Temperatur (°C)          0\n",
+      "Lufttrykk (hPa)          0\n",
+      "Nedbør (mm)              0\n",
+      "Relativ fuktighet (%)    0\n",
+      "Skydekke (oktas)         0\n",
       "dtype: int64\n"
      ]
     }
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +172,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,11 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_R_Sammenslaaing_UtenFeil = df_sammenslaaing.copy()"
+    "R_Sammenslaaing_uten_feil = df_sammenslaaing.copy()"
    ]
   },
   {
@@ -208,15 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
+    "R_Sammenslaaing_uten_feil['Nedbør (mm)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Nedbør (mm)']]\n",
+    "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
     "\n",
-    "df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
-    "df_R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)\n",
+    "R_Sammenslaaing_uten_feil['Lufttrykk (hPa)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Lufttrykk (hPa)']]\n",
+    "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)\n",
     "\n",
     "#LAGT INN I RENSE DATA"
    ]
@@ -230,35 +234,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)\n",
-      "0 2023-01-01              0.5           1004.1          4.5\n",
-      "1 2023-01-02             -5.4           1011.0          0.0\n",
-      "2 2023-01-03             -6.4           1017.9          0.1\n",
-      "3 2023-01-04             -6.2           1011.4          0.0\n",
-      "4 2023-01-05             -3.1           1012.7          0.0\n"
+      "        Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
+      "0 2023-01-01              1.1           1005.7          0.0   \n",
+      "1 2023-01-02             -2.7           1010.8          0.6   \n",
+      "2 2023-01-03             -5.8           1019.6          0.0   \n",
+      "3 2023-01-04             -7.9           1008.7          0.9   \n",
+      "4 2023-01-05             -3.9           1015.3         19.8   \n",
+      "\n",
+      "   Relativ fuktighet (%)  Skydekke (oktas)  \n",
+      "0                     69               3.0  \n",
+      "1                     83               7.0  \n",
+      "2                     85               1.0  \n",
+      "3                     87               8.0  \n",
+      "4                     81               8.0  \n"
      ]
     }
    ],
    "source": [
     "# Gjør at 'Dato' er i datetime-format\n",
-    "df_R_Sammenslaaing_UtenFeil['Dato'] = pd.to_datetime(df_R_Sammenslaaing_UtenFeil['Dato'])\n",
+    "R_Sammenslaaing_uten_feil['Dato'] = pd.to_datetime(R_Sammenslaaing_uten_feil['Dato'])\n",
     "\n",
     "# Start fra første dato og generer resten\n",
-    "start_dato = df_R_Sammenslaaing_UtenFeil.loc[0, 'Dato']\n",
-    "riktige_datoer = [start_dato + pd.Timedelta(days=i) for i in range(len(df_R_Sammenslaaing_UtenFeil))]\n",
+    "start_dato = R_Sammenslaaing_uten_feil.loc[0, 'Dato']\n",
+    "riktige_datoer = [start_dato + pd.Timedelta(days=i) for i in range(len(R_Sammenslaaing_uten_feil))]\n",
     "\n",
     "# Sett inn de riktige datoene\n",
-    "df_R_Sammenslaaing_UtenFeil['Dato'] = riktige_datoer\n",
+    "R_Sammenslaaing_uten_feil['Dato'] = riktige_datoer\n",
     "\n",
     "\n",
-    "print(df_R_Sammenslaaing_UtenFeil.head())"
+    "print(R_Sammenslaaing_uten_feil.head())"
    ]
   },
   {
@@ -270,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -356,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
