fiksa på rense_data

--- a/tasks/rense_data.ipynb
+++ b/tasks/rense_data.ipynb
@@ -74,27 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'R_Sammenslaaing_uten_feil' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-1d4000421be0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Nedbør (mm)'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mR_Sammenslaaing_uten_feil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Nedbør (mm)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/R_Sammenslaaing_uten_feil.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Lufttrykk (hPa)'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mR_Sammenslaaing_uten_feil\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Lufttrykk (hPa)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mR_Sammenslaaing_UtenFeil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/R_Sammenslaaing_uten_feil.csv\"\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'R_Sammenslaaing_uten_feil' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "R_Sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Nedbør (mm)']]\n",
-    "R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
+    "R_Sammenslaaing_uten_feil = pd.read_csv(\"../data/R_Sammenslaaing_uten_feil.csv\")\n",
     "\n",
-    "R_Sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Lufttrykk (hPa)']]\n",
-    "R_Sammenslaaing_UtenFeil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
+    "R_Sammenslaaing_uten_feil['Nedbør (mm)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Nedbør (mm)']]\n",
+    "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
+    "\n",
+    "R_Sammenslaaing_uten_feil['Lufttrykk (hPa)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Lufttrykk (hPa)']]\n",
+    "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
    ]
   },
   {
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
